--- a/ANN.ipynb
+++ b/ANN.ipynb
@@ -4,7 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ANN"
+    "## ANN\n",
+    "**ANN** 은 딥러닝에서 사용하는 인공신경망(Artificial Neural Network)이다.  \n",
+    "**대표적인 예**와 그에 **해당하는 이론에 대한 내용**은 아래 링크를 참조하자.  \n",
+    "\n",
+    "1. <a href=\"https://wjddyd66.github.io/dl/2019/07/26/Perceptron.html\">Perceptron</a>\n",
+    "2. <a href=\"https://wjddyd66.github.io/dl/2019/07/26/NeuralNetwork-(1)-Basic-&-Activation-Function.html\">MLP(NeuralNetwork)</a>\n"
    ]
   },
   {
@@ -74,14 +79,14 @@
     "\n",
     "\n",
     "**nn.Sequential**  \n",
-    "torch.nn.Sequential(* args)  \n",
+    "<code>torch.nn.Sequential(* args)</code>  \n",
     "하나의 Container로서 Module을 서로 연결시켜주는 역할을 한다.  \n",
     "하나의 ordered dict of moduls라고 생각해도 된다.  \n",
     "여기서의 Model은 nn.Sequential을 통하여 nn.Linear와 nn.ReLU를 각 3개씩 연결하였다.  \n",
     "\n",
     "\n",
     "**nn.ReLu**  \n",
-    "torch.nn.ReLU(inplace=False)  \n",
+    "<code>torch.nn.ReLU(inplace=False)</code>  \n",
     "$$ReLU(x) = max(0,x)$$"
    ]
   },
