--- a/Linear.ipynb
+++ b/Linear.ipynb
@@ -4,172 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Pytorch 기본 동작 방법"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "파이토치 프레임 워크 불러오기  \n",
-    "X라는 변수에 파이토치 텐서를 하나 생성해서 지정, shape = (2,3)  \n",
-    "텐서에는 임의의 난수가 들어간다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[-1.3725e-22,  1.7796e-43, -9.9704e-29],\n",
-      "        [ 1.7796e-43, -1.3859e-22,  1.7796e-43]])\n"
-     ]
-    }
-   ],
-   "source": [
-    "import torch\n",
-    "X = torch.Tensor(2,3)\n",
-    "print(X)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "텐서를 생성하면서 원하는 값으로 초기화 하려면 인수로 배열을 전달  \n",
-    "\n",
-    "torch.tensor함수는 인수로 data, dtype, device, requires_grad를 전달\n",
-    "- data: tensor에 넣을 data => 배열로 전달\n",
-    "- dtype: data의 타입 결정\n",
-    "- requres_grad: 텐서에 대한 기울기를 저장할 지 여부 지정\n",
-    "- device: 텐서를 어느 기기에 올릴 것인지 명시\n",
-    "\n",
-    "**dtype 종류**\n",
-    "<table class=\"docutils align-default\">\n",
-    "<colgroup>\n",
-    "<col style=\"width: 19%\">\n",
-    "<col style=\"width: 34%\">\n",
-    "<col style=\"width: 21%\">\n",
-    "<col style=\"width: 25%\">\n",
-    "</colgroup>\n",
-    "<thead>\n",
-    "<tr class=\"row-odd\"><th class=\"head\"><p>Data type</p></th>\n",
-    "<th class=\"head\"><p>dtype</p></th>\n",
-    "<th class=\"head\"><p>CPU tensor</p></th>\n",
-    "<th class=\"head\"><p>GPU tensor</p></th>\n",
-    "</tr>\n",
-    "</thead>\n",
-    "<tbody>\n",
-    "<tr class=\"row-even\"><td><p>32-bit floating point</p></td>\n",
-    "<td><p><code class=\"docutils literal notranslate\"><span class=\"pre\">torch.float32</span></code> or <code class=\"docutils literal notranslate\"><span class=\"pre\">torch.float</span></code></p></td>\n",
-    "<td><p><code class=\"xref py py-class docutils literal notranslate\"><span class=\"pre\">torch.FloatTensor</span></code></p></td>\n",
-    "<td><p><code class=\"xref py py-class docutils literal notranslate\"><span class=\"pre\">torch.cuda.FloatTensor</span></code></p></td>\n",
-    "</tr>\n",
-    "<tr class=\"row-odd\"><td><p>64-bit floating point</p></td>\n",
-    "<td><p><code class=\"docutils literal notranslate\"><span class=\"pre\">torch.float64</span></code> or <code class=\"docutils literal notranslate\"><span class=\"pre\">torch.double</span></code></p></td>\n",
-    "<td><p><code class=\"xref py py-class docutils literal notranslate\"><span class=\"pre\">torch.DoubleTensor</span></code></p></td>\n",
-    "<td><p><code class=\"xref py py-class docutils literal notranslate\"><span class=\"pre\">torch.cuda.DoubleTensor</span></code></p></td>\n",
-    "</tr>\n",
-    "<tr class=\"row-even\"><td><p>16-bit floating point</p></td>\n",
-    "<td><p><code class=\"docutils literal notranslate\"><span class=\"pre\">torch.float16</span></code> or <code class=\"docutils literal notranslate\"><span class=\"pre\">torch.half</span></code></p></td>\n",
-    "<td><p><code class=\"xref py py-class docutils literal notranslate\"><span class=\"pre\">torch.HalfTensor</span></code></p></td>\n",
-    "<td><p><code class=\"xref py py-class docutils literal notranslate\"><span class=\"pre\">torch.cuda.HalfTensor</span></code></p></td>\n",
-    "</tr>\n",
-    "<tr class=\"row-odd\"><td><p>8-bit integer (unsigned)</p></td>\n",
-    "<td><p><code class=\"docutils literal notranslate\"><span class=\"pre\">torch.uint8</span></code></p></td>\n",
-    "<td><p><code class=\"xref py py-class docutils literal notranslate\"><span class=\"pre\">torch.ByteTensor</span></code></p></td>\n",
-    "<td><p><code class=\"xref py py-class docutils literal notranslate\"><span class=\"pre\">torch.cuda.ByteTensor</span></code></p></td>\n",
-    "</tr>\n",
-    "<tr class=\"row-even\"><td><p>8-bit integer (signed)</p></td>\n",
-    "<td><p><code class=\"docutils literal notranslate\"><span class=\"pre\">torch.int8</span></code></p></td>\n",
-    "<td><p><code class=\"xref py py-class docutils literal notranslate\"><span class=\"pre\">torch.CharTensor</span></code></p></td>\n",
-    "<td><p><code class=\"xref py py-class docutils literal notranslate\"><span class=\"pre\">torch.cuda.CharTensor</span></code></p></td>\n",
-    "</tr>\n",
-    "<tr class=\"row-odd\"><td><p>16-bit integer (signed)</p></td>\n",
-    "<td><p><code class=\"docutils literal notranslate\"><span class=\"pre\">torch.int16</span></code> or <code class=\"docutils literal notranslate\"><span class=\"pre\">torch.short</span></code></p></td>\n",
-    "<td><p><code class=\"xref py py-class docutils literal notranslate\"><span class=\"pre\">torch.ShortTensor</span></code></p></td>\n",
-    "<td><p><code class=\"xref py py-class docutils literal notranslate\"><span class=\"pre\">torch.cuda.ShortTensor</span></code></p></td>\n",
-    "</tr>\n",
-    "<tr class=\"row-even\"><td><p>32-bit integer (signed)</p></td>\n",
-    "<td><p><code class=\"docutils literal notranslate\"><span class=\"pre\">torch.int32</span></code> or <code class=\"docutils literal notranslate\"><span class=\"pre\">torch.int</span></code></p></td>\n",
-    "<td><p><code class=\"xref py py-class docutils literal notranslate\"><span class=\"pre\">torch.IntTensor</span></code></p></td>\n",
-    "<td><p><code class=\"xref py py-class docutils literal notranslate\"><span class=\"pre\">torch.cuda.IntTensor</span></code></p></td>\n",
-    "</tr>\n",
-    "<tr class=\"row-odd\"><td><p>64-bit integer (signed)</p></td>\n",
-    "<td><p><code class=\"docutils literal notranslate\"><span class=\"pre\">torch.int64</span></code> or <code class=\"docutils literal notranslate\"><span class=\"pre\">torch.long</span></code></p></td>\n",
-    "<td><p><code class=\"xref py py-class docutils literal notranslate\"><span class=\"pre\">torch.LongTensor</span></code></p></td>\n",
-    "<td><p><code class=\"xref py py-class docutils literal notranslate\"><span class=\"pre\">torch.cuda.LongTensor</span></code></p></td>\n",
-    "</tr>\n",
-    "<tr class=\"row-even\"><td><p>Boolean</p></td>\n",
-    "<td><p><code class=\"docutils literal notranslate\"><span class=\"pre\">torch.bool</span></code></p></td>\n",
-    "<td><p><a class=\"reference internal has-code\" href=\"#torch.BoolTensor\" title=\"torch.BoolTensor\"><code class=\"xref py py-class docutils literal notranslate\"><span class=\"pre\">torch.BoolTensor</span></code></a></p></td>\n",
-    "<td><p><code class=\"xref py py-class docutils literal notranslate\"><span class=\"pre\">torch.cuda.BoolTensor</span></code></p></td>\n",
-    "</tr>\n",
-    "</tbody>\n",
-    "</table>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[1, 2, 3],\n",
-      "        [4, 5, 6]])\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 텐서에 직접 값 대입\n",
-    "X = torch.tensor([[1,2,3],[4,5,6]])\n",
-    "print(X)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "연산 그래프 생성후 Gradient Descent 로 기울기 확인  \n",
-    "x tensor에만 requires_grad = True로 설정하여 값 확인 가능"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([ 8., 12.]) None None\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = torch.tensor(data=[2.0,3.0],requires_grad=True)\n",
-    "y = x**2\n",
-    "z = 2*y + 3\n",
-    "\n",
-    "target = torch.tensor([3.0, 4.0])\n",
-    "loss = torch.sum(torch.abs(z-target))\n",
-    "loss.backward()\n",
-    "\n",
-    "print(x.grad, y.grad, z.grad)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## 선형 회귀 분석"
    ]
   },
@@ -237,9 +71,11 @@
     "\n",
     "\n",
     "**mean**\n",
-    "$$loss(x,y) = \\frac{1}{n} \\sum |x_i-y_i|$$\n",
+    "$loss(x,y) = \\frac{1}{n} \\sum |x_i-y_i|$\n",
+    "\n",
+    "\n",
     "**sum**\n",
-    "$$loss(x,y) = \\sum |x_i-y_i|$$"
+    "$loss(x,y) = \\sum |x_i-y_i|$"
    ]
   },
   {
@@ -272,6 +108,13 @@
     "plt.scatter(x.numpy(),y_noise.numpy(),s=7,c=\"gray\")\n",
     "plt.axis([-12, 12, -25, 25])\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Model Loss선언"
    ]
   },
   {
